# zodl-android

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.gradle.kts  buildscript-gradle.lockfile  gradle.properties  settings.gradle.kts
.github/actions/antivirus/: Dockerfile
.github/workflows/: create-release.yml  deploy.yml  e2e-smoke.yml  linear-release.yml  pull-request.yml  release.yaml  test-sf.yml
Sources/ZcashLightClientKit/Rust/Voting/: VotingRustBackend.swift
app/: build.gradle.kts
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/res/xml/: locales_config.xml
app/src/zcashmainnetFossDebug/: AndroidManifest.xml
app/src/zcashmainnetFossDebug/res/xml/: network_security_config.xml
app/src/zcashmainnetInternalDebug/: AndroidManifest.xml
app/src/zcashtestnetInternalDebug/res/values/: bools.xml
build-conventions-secant/: build.gradle.kts  gradle.lockfile
build-conventions-secant/src/main/kotlin/: secant.android-build-conventions.gradle.kts
build-conventions-secant/src/main/kotlin/publish/: ChangelogParser.kt  secant.publish-conventions.gradle.kts
build-info-lib/: build.gradle.kts
configuration-impl-android-lib/: build.gradle.kts
crash-android-lib/: build.gradle.kts
crash-android-lib/src/zcashmainnetStoreRelease/: AndroidManifest.xml
docs/: CI.md  CONDUCT.md  Setup.md  SwapKit API (Maya DEX).md  SwapKit Spec (Maya DEX).md  mob-1430-master.csv
docs/specs/: MOB-1108-code-refs.md  MOB-1108-overview.md  MOB-1108-plan.md  MOB-1108-screen-map.md
docs/testing/: Testing.md
docs/whatsNew/: WHATS_NEW_EN.md  WHATS_NEW_ES.md  WHATS_NEW_PT.md
fastlane/metadata/android/en-US/changelogs/: 1468.txt  1516.txt  1601.txt  1602.txt  1691.txt  1696.txt  1698.txt  1729.txt  1736.txt  1741.txt  1853.txt  1911.txt  1992.txt
fastlane/metadata/android/es/changelogs/: 1469.txt  1516.txt  1601.txt  1602.txt  1691.txt  1696.txt  1698.txt  1729.txt  (+5 more)
fastlane/metadata/android/pt/: full_description.txt  short_description.txt  title.txt
preference-impl-android-lib/: build.gradle.kts
rust/: CHANGELOG.md
rust/src/: voting.rs
rust/src/voting/: recovery.rs  rounds.rs  share_tracking.rs  test_helpers.rs
scripts/: prepare-foss-build.sh
sdk-ext-lib/: build.gradle.kts
spackle-android-lib/: build.gradle.kts  proguard-consumer.txt
tools/: detekt-baseline.xml  detekt.yml
ui-design-lib/: build.gradle.kts
ui-integration-test/: build.gradle.kts
ui-lib/: build.gradle.kts
ui-lib/src/main/: AndroidManifest.xml
ui-screenshot-test/: build.gradle.kts
(+974 files in other folders)
